--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <a href="/todos">Todo's</a>
+    <a href="/todos">To-Do list</a>
   </body>
 </html>
